--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -12,7 +12,7 @@ ul {
   padding-left: 10px;
 }
 
-li {
+.nav {
   display: inline-flex;
   align-items: center;
   border: 4px solid rgba(255, 160, 122, 0.597);
