--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,6 +2,25 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spots {
+  text-align: center;
+  margin: 50px;
+}
+
+.title {
+  text-align: center;
+  font-size: 34pt;
+  text-decoration: underline;
+  color: burlywood;
+  text-shadow: 2px 2px 4px black;
+}
+
 body {
   background-color: rgb(101, 133, 165);
 }
