basic splash page added

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,4 +1,4 @@
-form {
+/* form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,4 +38,4 @@ button:hover {
 
 a {
   cursor: pointer;
-}
+} */
