--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,12 @@
 * {
   font-family: 'Montserrat', sans-serif;
 }
+
+body {
+  overflow-y: scroll;
+  margin: 0;
+}
+
+/* .spot-index {
+  padding-top: 80px;
+} */
