--- a/frontend/src/components/LoginFormModal/LoginFormModal.css
+++ b/frontend/src/components/LoginFormModal/LoginFormModal.css
@@ -3,7 +3,7 @@
   width: 570px;
 }
 
-.x {
+/* .x {
   background-color: white;
   border: none;
   font-size: 14pt;
@@ -26,7 +26,7 @@
   padding: 20px 30px;
   padding-top: 30px;
   margin: 0;
-}
+} */
 
 .username {
   border-top: 1px solid rgba(128, 128, 128, 0.542);
