--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -11,6 +11,7 @@
 
 .top-bar {
   padding: 20px;
+  padding-right: 35px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -199,6 +200,6 @@
   font-size: 17pt;
 }
 
-.email {
+.phone {
   font-size: 14pt;
 }
