--- a/frontend/src/components/CreateSpotForm/CreateSpotForm.css
+++ b/frontend/src/components/CreateSpotForm/CreateSpotForm.css
@@ -51,7 +51,8 @@
   padding-left: 10px;
 }
 
-.previewImg {
+.previewImg,
+.price2 {
   border: 1px solid rgba(128, 128, 128, 0.542);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
