--- a/frontend/src/components/LoginFormModal/LoginFormModal.css
+++ b/frontend/src/components/LoginFormModal/LoginFormModal.css
@@ -66,7 +66,7 @@
   color: rgba(74, 74, 74, 0.747);
 }
 
-.form input {
+.form .input {
   height: 50px;
   width: 500px;
   padding-left: 10px;
@@ -106,6 +106,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.widgets a {
+  text-decoration: none;
 }
 
 .widget {
