--- a/frontend/src/components/MySpotsIndex/MySpotsIndex.css
+++ b/frontend/src/components/MySpotsIndex/MySpotsIndex.css
@@ -1,4 +1,4 @@
-.my-reviews {
+.my-spots {
   margin: 30px 30px;
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -85,4 +85,21 @@
   padding: 10px;
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
+}
+
+@media (max-width: 1200px) {
+  .my-spots {
+    margin: 30px 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+}
+
+@media (max-width: 900px) {
+  .my-spots {
+    margin: 30px 30px;
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: space-evenly;
+  }
 }
