--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -260,6 +260,7 @@ nav {
   cursor: pointer;
   padding: 12px;
   border-radius: 21px;
+  color: #333;
 }
 
 .globe:hover {
@@ -276,4 +277,11 @@ nav {
 
 .host:active {
   color: rgba(128, 128, 128, 0.244)
+}
+
+@media (max-width: 1200px) {
+  .globe,
+  .bar {
+    display: none
+  }
 }
