--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -210,6 +210,21 @@ nav {
   transition: box-shadow 250ms ease;
 }
 
+.no-profile {
+  position: relative;
+  vertical-align: middle;
+  height: 42px;
+  width: 40px;
+  display: inline-flex;
+  align-items: center;
+  margin-left: 57px;
+  border-radius: 15px;
+  background-color: white;
+  border: 1px solid rgba(128, 128, 128, 0.352);
+  padding: 5px 5px 5px 12px;
+  transition: box-shadow 250ms ease;
+}
+
 .profile:hover {
   box-shadow: 0 0 10px rgb(173, 173, 173);
 }
@@ -217,6 +232,12 @@ nav {
 .profile-lines {
   font-size: 15px;
   padding-left: 5px;
+  color: rgb(101, 101, 101);
+}
+
+.no-profile-lines {
+  font-size: 15px;
+  padding-left: 0.5px;
   color: rgb(101, 101, 101);
 }
 
