--- a/frontend/src/components/SpotIndex/SpotIndex.css
+++ b/frontend/src/components/SpotIndex/SpotIndex.css
@@ -1,3 +1,7 @@
+.spot-index {
+  margin: 0 40px;
+}
+
 .all-spots {
   margin: 30px 30px;
   display: grid;
@@ -32,10 +36,15 @@
   text-decoration: none;
 }
 
+.spot-image-container{
+  max-width: 373px;
+  max-height: 354px;
+}
+
 .spot-image {
   object-fit: cover;
-  width: 270px;
-  height: 270px;
+  width: 14.5vw;
+  height: 13.8vw;
   border-radius: 5%;
 }
 
@@ -70,6 +79,10 @@
     grid-template-columns: auto auto auto auto auto;
     justify-content: space-evenly;
   }
+  .spot-image {
+    width: 17vw;
+    height: 16vw;
+  }
 }
 
 @media (max-width: 1500px) {
@@ -78,6 +91,10 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-evenly;
+  }
+  .spot-image {
+    width: 20.5vw;
+    height: 19.5vw;
   }
 }
 
@@ -88,6 +105,10 @@
     grid-template-columns: auto auto auto;
     justify-content: space-evenly;
   }
+  .spot-image {
+    width: 26vw;
+    height: 25vw;
+  }
 }
 
 @media (max-width: 900px) {
@@ -97,6 +118,10 @@
     grid-template-columns: auto auto;
     justify-content: space-evenly;
   }
+  .spot-image {
+    width: 35vw;
+    height: 34vw;
+  }
 }
 
 @media (max-width: 600px) {
@@ -105,5 +130,9 @@
     display: grid;
     grid-template-columns: auto;
     justify-content: space-evenly;
+  }
+  .spot-image {
+    width: 70vw;
+    height: 69vw;
   }
 }
