--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,6 +7,7 @@ nav {
   padding-bottom: 18px;
   border-bottom: 1px solid rgba(213, 213, 213, 0.441);
   z-index: 1;
+  width: 100%;
 }
 
 /* .nav-left {
