--- a/frontend/src/components/ReservationForm/ReservationForm.css
+++ b/frontend/src/components/ReservationForm/ReservationForm.css
@@ -7,7 +7,8 @@
   border-radius: 12px;
   border: 1px solid rgb(221, 221, 221);
   padding: 14px 24px 24px 24px;
-  box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;;
+  box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+  width: min-content;
 }
 
 .reservation-form {
@@ -125,6 +126,7 @@
 
 input[type="date"]::-webkit-calendar-picker-indicator {
     padding-right: 6px;
+    cursor: pointer;
 }
 
 .charged {
