--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -1,5 +1,12 @@
+.single-spot-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .single-spot {
   margin: 0 20%;
+  max-width: 1500px;
 }
 
 .single-spot-title {
@@ -91,7 +98,7 @@
 
 .single-spot-lower-right {
   margin-left: 90px;
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 .single-spot-lower-left-section {
@@ -163,7 +170,11 @@
   font-weight: 600;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
+  .single-spot-lower {
+    display: block;
+  }
+
   .img-div {
     display: block;
     width: 100%;
@@ -175,18 +186,18 @@
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    /* object-fit: contain; */
   }
 
   .single-spot-img-alt,
   .single-spot-subtitle-right {
     display: none;
   }
-}
 
-@media (max-width: 900px) {
   .single-spot-lower-right {
-    display: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding-bottom: 40px;
   }
 
   .single-spot-lower {
@@ -199,4 +210,8 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.plain-link {
+  color: black;
 }
