--- a/frontend/src/components/SpotIndex/SpotIndex.css
+++ b/frontend/src/components/SpotIndex/SpotIndex.css
@@ -2,7 +2,14 @@
   margin: 0 40px;
 }
 
+.all-spots-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .all-spots {
+  max-width: 2000px;
   margin: 30px 30px;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto;
@@ -132,7 +139,11 @@
     justify-content: space-evenly;
   }
   .spot-image {
-    width: 70vw;
-    height: 69vw;
+    width: 60vw;
+    height: 59vw;
+  }
+
+  .host {
+    display: none;
   }
 }
