--- a/frontend/src/components/SpotTypeBar/SpotTypeBar.css
+++ b/frontend/src/components/SpotTypeBar/SpotTypeBar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   width: 95vw;
-  margin-left: 30px;
+  /* margin-left: 30px; */
 }
 
 .icons-div a {
