--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -218,6 +218,13 @@
 }
 
 @media (max-width: 600px) {
+  .single-spot-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .single-spot {
     text-align: center;
   }
