--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -15,7 +15,7 @@ footer {
   align-items: center;
   font-size: 10pt;
   font-weight: 600;
-  color: rgba(51, 51, 51, 0.722);
+  color: rgb(51, 51, 51);
 }
 
 .footer-right {
