--- a/frontend/src/components/MySpotsIndex/MySpotsIndex.css
+++ b/frontend/src/components/MySpotsIndex/MySpotsIndex.css
@@ -5,23 +5,28 @@
   justify-content: center;
 }
 
+.my-spots-location {
+  margin-bottom: 0;
+}
+
 .review-title {
   text-align: center;
-  padding-bottom: 20px;
-  border-bottom: 1px solid rgba(213, 213, 213, 0.441);
+  padding-top: 20px;
+  /* border-bottom: 1px solid rgba(213, 213, 213, 0.441); */
 }
 
 .one-review {
-  margin: 25px 50px;
+  margin: 25px 25px;
   text-align: center;
 }
 
-.one-review h3 {
+.my-spots-title {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   padding-bottom: 10px;
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: -1px;
   font-weight: 600;
   margin-bottom: 0;
@@ -38,6 +43,7 @@
 
 .review-link {
   text-decoration: none;
+
 }
 
 .review-image {
@@ -53,27 +59,36 @@
 }
 
 .review-buttons {
+  margin-top: 10px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.review-button {
+.my-spots-button {
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
   background-color: white;
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
   cursor: pointer;
+  width: 113px;
+}
+
+.my-spots-button:hover {
+  background-color: rgba(128, 128, 128, 0.07);
 }
 
 .review-button:hover {
-  background-color: white;
+  background-color: rgba(128, 128, 128, 0.07);
 }
 
-.spot-star {
-  display: inline-flex;
+.my-spots-star {
+  display: flex;
   align-items: center;
-  font-weight: 500;
+  margin: 0;
+  padding: 0;
+  font-size: 12pt;
 }
 
 .review-description {
@@ -85,6 +100,14 @@
   padding: 10px;
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
+}
+
+@media (max-width: 1500px) {
+  .my-spots {
+    margin: 30px 30px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+  }
 }
 
 @media (max-width: 1200px) {
